# esp32s3-rust

./: README.md
baremetal/: Cargo.toml
hal/: Cargo.toml
